Fixed misaligne breadcrumbs

--- a/_theme/layout.css
+++ b/_theme/layout.css
@@ -166,6 +166,7 @@ div#breadcrumb-container ul {
   display: inline-block;
   height: 33px;
   padding-top: 7px;
+  margin: 0;
 }
 
 #breadcrumb-container li {
